--- a/coptic/dictionary_editor/styles/styles.css
+++ b/coptic/dictionary_editor/styles/styles.css
@@ -65,13 +65,13 @@ fieldset {
 	border: none;
 	line-height: 1.5;
 	tab-size: 1em;
-	border-bottom: .5em solid #222;
+	border-bottom: .5em solid #222 !important;
 	outline: none;
 }
 
 #rendered_view {
 	line-height: 1.5;
-	border-top: .5em solid #222;
+	border-top: .5em solid #222 !important;
 }
 
 #editor_text,
@@ -81,7 +81,7 @@ fieldset {
 	background: #111;
 	padding: .5em;
 	overflow-y: scroll;
-	height: calc(50vh - 1em);
+	height: calc(50dvh - 1em);
 	border: 1em solid #222;
 }
 
