--- a/coptic/dictionary_editor/styles/styles.css
+++ b/coptic/dictionary_editor/styles/styles.css
@@ -16,8 +16,10 @@ fieldset {
 #interface {
 	display: grid;
 	grid-template-rows: repeat(2, 1fr);
-	//gap: .5em;
-	//box-sizing: border-box;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 0;
+	width: 100%;
+	height: 100%;
 }
 
 #interface > * {
@@ -53,36 +55,73 @@ fieldset {
 	*/
 }
 
+code {
+	font-family: rk_coptic;
+	color: lightgray;
+}
 
+#legend {
+	grid-area: 1 / 1 / 3 / 2;
+	font-family: rk_coptic;
+	width: calc(38vw - 2.5em);
+	border: .5em solid #222;
+	border-right: none;
+}
+
+#legend p {
+	font-family: monospace;
+	color: gold;
+	margin: .5em;
+	text-transform: uppercase;
+}
+
+#legend ul {
+	line-height: 1.5;
+	list-style-type: none;
+	margin-top: 0;
+	padding: 0 .5em;
+}
+
+#legend ul li {
+	background: #ffffff11;
+	padding: 0 .5em;
+	border: 1px solid #ffffff22;
+}
+
+#legend ul li + li {
+	margin-top: .5em;
+}
 
 #editor_text {
+	grid-area: 1/2/2/3;
 	line-height: 2;
 	white-space: pre-wrap;
 	font-size: 1em;
-	font-family: rk_coptic, rk_greek, monospace;
+	font-family: rk_coptic, rk_greek;
 	font-weight: normal;
-	color: lightgreen;
+	color: gray;
 	border: none;
 	line-height: 1.5;
 	tab-size: 1em;
-	border-bottom: .5em solid #222 !important;
+	border-bottom: .25em solid #222 !important;
 	outline: none;
 }
 
 #rendered_view {
+	grid-area: 2/2/3/3;
 	line-height: 1.5;
-	border-top: .5em solid #222 !important;
+	border-top: .25em solid #222 !important;
 }
 
 #editor_text,
 #rendered_view {
 	box-sizing: border-box;
-	width: 100%;
+	width: 62vw;
 	background: #111;
 	padding: .5em;
 	overflow-y: scroll;
 	height: calc(50dvh - 1em);
-	border: 1em solid #222;
+	border: .5em solid #222;
 }
 
 #rendered_view > ul {
@@ -146,4 +185,7 @@ i.dialect {
 	line-height: inherit;
 }
 
+.coptic sup {
+	font-family: sans-serif;
+}
 
