--- a/coptic/styles/styles.css
+++ b/coptic/styles/styles.css
@@ -1,14 +1,7 @@
 /* Crum */
 
+/*
 
-#dictionary ul {
-	list-style-type: none;
-	padding-left: .5em;
-}
-
-#dictionary > ul {
-	padding-left: 1em;
-}
 
 #dictionary > ul li {
 	margin-top: .0em;
@@ -107,3 +100,5 @@ p sup a {
 	font-size: .5em;
 	text-decoration: none;
 }
+
+*/
