--- a/coptic/crum/styles/styles.css
+++ b/coptic/crum/styles/styles.css
@@ -35,9 +35,21 @@ header {
 	position: sticky;
 	z-index: 1;
 	top: 0;
-	padding-top: .5em;
+	padding: .5em 1em 0;
 	//border-top: .5em solid #222222;
 	background: linear-gradient(to right, #111111, #111111);
+}
+
+header:before {
+	content: "";
+	width: 100%;
+	height: 2em;
+	position: absolute;
+	bottom: 1px;
+	left: 0;
+	right: 2em;
+	background: linear-gradient(to right, transparent, transparent, transparent, #111111);
+	pointer-events: none;
 }
 
 #menu {
@@ -234,21 +246,58 @@ header {
 	position: relative;
 }
 
-.entry:before {
+.entry > ul {
+	list-style-type: none;
+}
+
+.entry > ul > li:nth-child(1):before {
 	content: "▷";
 	font-size: 1em;
-	position: absolute;
-	//left: 1em;
+	position: relative;
+	left: -.5em;
 	color: #ffb60022;
 	display: inline-block;
-	transform: rotate(90deg);
+	rotate: 90deg;
 	transition:
-		transform .2s ease-in-out,
+		rotate .2s ease-in-out,
 		color .2s ease-in-out;
 }
 
-.entry:hover:before {
+.entry > ul > li:nth-child(1).collapse:before {
+	rotate: 0deg;
+}
+
+.entry > ul > li:nth-child(1):hover:before {
 	color: #ffb600ff;
+}
+
+.entry > ul > li:nth-child(1).collapse + li {
+	display: none;
+}
+
+.dialect sup {
+	font-size: inherit;
+	font-size: .5em;
+	padding-left: 0;
+}
+
+.dialect.lycopolitan sup {
+	font-style: normal;
+}
+
+i.dialect {
+	color: steelblue;
+}
+
+sup {
+	line-height: 0;
+}
+
+.headword {
+	color: violet;
+	font-family: rk_coptic;
+	font-size: 1.2em;
+	line-height: inherit;
 }
 
 .entry > ul {
