--- a/coptic/crum/styles/styles.css
+++ b/coptic/crum/styles/styles.css
@@ -227,14 +227,10 @@ header:before {
 	text-indent: 0;
 }
 
-
-
-
-
-
-
-
-
+#additions_and_corrections li,
+#additions_and_corrections li * {
+	line-height: 1.5 !important;
+}
 
 
 #dictionary > ul {
