--- a/coptic/crum/styles/styles.css
+++ b/coptic/crum/styles/styles.css
@@ -273,28 +273,30 @@ header:before {
 }
 
 #additions_and_corrections table * {
-	line-height: 2em;
+	//line-height: 2em;
 }
 
 #additions_and_corrections td {
-	//border: 1px solid gold;
+	padding: .5em;
+	line-height: 1.5;
+	border: 1px solid #ffffff33;
 }
 
 #additions_and_corrections td.page {
 	color: #ffffff;
 	text-align: right;
+	white-space: nowrap;
 	vertical-align: top;
-	padding: 0 .5em;
 	background: #ffffff11;
 	border-top-left-radius: 5px;
 	border-bottom-left-radius: 5px;
 }
 
 #additions_and_corrections td.note {
-	padding: 0 .5em;
 	background: #ffffff07;
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
+	border-left: none;
 }
 
 #additions_and_corrections td.note p {
@@ -377,7 +379,7 @@ header:before {
 
 
 
-.entry  ul ul {
+.entry ul ul {
 	padding-left: 1em;
 	list-style-type: none;
 }
@@ -408,11 +410,23 @@ sup {
 	color: violet;
 	font-family: rk_coptic;
 	font-size: 1.2em;
-	line-height: inherit;
 }
 
+.greek {
+	font-size: 1.2em;
+}
 
+.arabic {
+	font-size: 1.3em;
+}
 
+.aramaic {
+	font-size: 1.5em;
+}
 
-
-
+.headword,
+.greek,
+.arabic,
+.aramaic {
+	line-height: 0;
+}
