--- a/coptic/crum/styles/styles.css
+++ b/coptic/crum/styles/styles.css
@@ -7,18 +7,34 @@
 }
 
 body {
+	display: flex;
+	flex-direction: column;
+	//grid-template-rows: auto 1fr;
 	margin: 0;
 	padding: 0;
+	height: 100dvh;
 	outline: none;
 	//border: .5em solid #222222;
 	//border-top: none;
+}
+
+#container {
+	display: initial;
+	flex-grow: 1;
+	//height: 80dvh;
+	max-height: 100%;
+	overflow-y: auto;
 }
 
 h1 {
 	color: goldenrod;
 	font-size: 1em;
 	line-height: 1;
-	margin: 0.5em 1em 1em;
+	margin: 0.5em 0em 1em;
+}
+
+h1 a {
+	color: goldenrod;
 }
 
 h2 {
@@ -32,16 +48,19 @@ p {
 }
 
 header {
-	position: sticky;
-	z-index: 1;
-	top: 0;
+	//position: sticky;
+	//z-index: 1;
+	//top: 0;
 	padding: .5em 1em 0;
+	box-sizing: border-box;
+	height: 20dvh;
+	height: fit-content;
 	//border-top: .5em solid #222222;
 	background: linear-gradient(to right, #111111, #111111);
 }
 
 header:before {
-	content: "";
+	//content: "";
 	width: 100%;
 	height: 2em;
 	position: absolute;
@@ -57,8 +76,19 @@ header:before {
 	border-bottom: 1px solid gray;
 }
 
-#menu ul {
+#menu > ul {
 	display: flex;
+	margin: 0;
+	padding: 0;
+}
+
+#menu > ul > li {
+	list-style-type: none;
+}
+
+#menu > ul > li:nth-child(2) > ul {
+	display: flex;
+	//flex-direction: row-reverse;
 	justify-content: flex-start;
 	flex-wrap: wrap;
 	gap: 0 .5em;
@@ -67,7 +97,12 @@ header:before {
 	//width: max-content;
 }
 
-#menu ul li {
+#menu > ul > li:nth-child(1) {
+	white-space: nowrap;
+}
+
+#menu > ul > li:nth-child(1),
+#menu > ul > li:nth-child(2) > ul > li {
 	//flex-grow:1;
 	list-style-type: none;
 	border: 1px solid gray;
@@ -81,23 +116,30 @@ header:before {
 	line-height: 2;
 }
 
-#menu ul li.active {
-	order: -1;
+#menu > ul > li:nth-child(1).active,
+#menu > ul > li:nth-child(2) > ul > li.active {
+	//order: -1;
 	background: #191c7c;
 }
+
+#menu > ul > li:nth-child(2) > ul > li.hide {
+	display: none;
+}
+
 #menu ul li:hover {
 	//background: #2f5953;
 	cursor: pointer;
 }
 
 #menu ul.tall li {
-	padding-bottom: 2em;
+	//padding-bottom: 2em;
 }
 
 #menu ul.tall li.second-row {
 	//margin-top: -2em;
 	//padding-bottom: 0em;
 }
+
 
 :is(#preface,
 #list_of_abbreviations,
@@ -106,7 +148,8 @@ header:before {
 #english_index,
 #greek_index,
 #arabic_index).show {
-	height: auto;
+	//height: auto;
+	display: initial;
 }
 
 
@@ -117,8 +160,9 @@ header:before {
 #english_index,
 #greek_index,
 #arabic_index {
-	height: 0em;
-	overflow: hidden;
+	//height: 0em;
+	//overflow: hidden;
+	display: none;
 }
 
 #additions_and_corrections ul,
